Fixed styles so modal content area is fully visible.

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -11,10 +11,7 @@
 
 /* this supports both location view and dyfi-form */
 .modal > .modal-dialog {
-
-  > .modal-content {
-    padding-bottom: 25px;
-  }
+  padding: 43px 0 55px;
 
   > .modal-footer {
     line-height: 40px;
